unpackaged/main/default/objects/Quota__c/Quota__c.object-meta.xml
<CustomObject>
    <description>What: DO NOT REMOVE. Used in the analytics demo data tool.</description>
    <label>Quota__c</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Quota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quota__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>