unpackaged/main/default/objects/Quota__c/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <label>Owner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>