unpackaged/main/default/objects/Quota__c/fields/QuotaAmount__c.field-meta.xml
<CustomField>
    <fullName>QuotaAmount__c</fullName>
    <label>Quota Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>