unpackaged/main/default/objects/Quota__c/fields/QuotaOwner_Id__c.field-meta.xml
<CustomField>
    <fullName>QuotaOwner_Id__c</fullName>
    <label>Quota Owner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>